--- a/server/mapInfo.html
+++ b/server/mapInfo.html
@@ -7,7 +7,8 @@
   </head>
   <body>
 	<pre>$mail_content$</pre>
-	<small><a href="http://ditu.google.cn/maps?q=$map_x$,$map_y$&amp;num=1&amp;sll=$map_x$,$map_y$&amp;sspn=0.624564,0.790957&amp;brcurrent=3,0x35f055a160ba85ff:0x36bd143f9b2e9d93,0,0x35f05137c865ad63:0xd348af83c67dc389%3B5,0,0&amp;ie=UTF8&amp;ll=$map_x$,$map_y$&amp;spn=0.021823,0.045447&amp;z=14&amp;source=embed" style="color:#0000FF;text-align:left">$mail_sign$</a></small><br />
-	<small><a href="http://code.google.com/p/yuchberry">Yuchberry PushMessage</a></small>
+	<small><a href="http://code.google.com/p/yuchberry">Yuchberry PushMessage</a></small><br />
+	<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://ditu.google.cn/maps?q=$map_x$,$map_y$&amp;num=1&amp;sll=$map_x$,$map_y$&amp;sspn=0.010917,0.022724&amp;brcurrent=3,0x35f05410fbf08a97:0xea21de81a06d377b,0,0x35f05137c865ad63:0xd348af83c67dc389%3B5,0,0&amp;ie=UTF8&amp;ll=$map_x$,$map_y$&amp;spn=0.010912,0.022724&amp;z=14&amp;output=embed"></iframe><br />
+	<small><a href="http://ditu.google.cn/maps?q=$map_x$,$map_y$&amp;num=1&amp;sll=$map_x$,$map_y$&amp;sspn=0.624564,0.790957&amp;brcurrent=3,0x35f055a160ba85ff:0x36bd143f9b2e9d93,0,0x35f05137c865ad63:0xd348af83c67dc389%3B5,0,0&amp;ie=UTF8&amp;ll=$map_x$,$map_y$&amp;spn=0.021823,0.045447&amp;z=14&amp;source=embed" style="color:#0000FF;text-align:left">$mail_sign$</a></small>	
   </body>
 </html>
