--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -63,6 +63,9 @@
       <tr>
         <td id="mainTab"></td>
       </tr>
+      <tr>
+        <td id="yuchTab"></td>
+      </tr>
     </table>
   </body>
 </html>
