--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -48,7 +48,7 @@
 	<table style="padding:0px; margin: 0px 0px 10px 0px; width:100%" cellpadding="0" cellspacing="0"> 
 		<tr style="height: 40px;">
 			<td id="plogo"> 
-				<a href="http://code.google.com/p/yuchberry/"> 
+				<a href="http://code.google.com/p/yuchberry/" target=_blank> 
 					<img src="http://code.google.com/p/yuchberry/logo?cct=1294378512" 
 				</a>
 			</td> 
