--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -49,7 +49,7 @@
 		<tr style="height: 40px;">
 			 
 			<td id="pname">
-				<a href="http://code.google.com/p/yuchberry/" target=_blank id="pname"> YuchBerry Mod版(YuchSign)</a>
+				<a href="http://code.google.com/p/yuchberry/" target=_blank id="pname"> YuchBerry 中转服务器注册机制 (YuchSign)</a>
 			</td>
 		</tr>
 	</table> 
