--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -49,7 +49,7 @@
 		<tr style="height: 40px;">
 			 
 			<td id="pname">
-				<a href="http://code.google.com/p/yuchberry/" target=_blank id="pname"> YuchBerry 中转服务器注册机制 (YuchSign)</a>
+				<a href="http://code.google.com/p/yuchberry/" target=_blank id="pname"> YuchBerry</a> 中转服务器注册机制 (<a href="http://yuchberrysign.yuchberry.info" target=_blank id="pname">YuchSign测试版</a>)
 			</td>
 		</tr>
 	</table> 
