--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -49,8 +49,10 @@
 		<tr style="height: 40px;">
 			 
 			<td id="pname">
-				<a href="http://code.google.com/p/yuchberry/" target=_blank id="pname"> YuchBerry</a> 中转服务器注册机制 (<a href="http://yuchberrysign.yuchberry.info" target=_blank id="pname">YuchSign测试版</a>)
+				<a href="http://code.google.com/p/yuchberry/" target=_blank id="pname"> YuchBerry</a> 中转服务器注册机制 (<a href="http://yuchberrysign.yuchberry.info" target=_blank id="pname">YuchSign</a>测试版)
+				<a href="http://code.google.com/p/yuchberry/wiki/Yuchsign_Using_Intro" target=_blank style="font-size: 80%;" >使用帮助</a>
 			</td>
+			
 		</tr>
 	</table> 
 	
