--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -64,5 +64,27 @@
         <td id="yuchTab"></td>
       </tr>
     </table>
+	
+	<script type="text/javascript">
+	/* <![CDATA[ */
+	var google_conversion_id = 977072348;
+	var google_conversion_language = "zh_CN";
+	var google_conversion_format = "1";
+	var google_conversion_color = "ffffff";
+	var google_conversion_label = "A8-4COzWsAIQ3OHz0QM";
+	var google_conversion_value = 0;
+	if (2) {
+	  google_conversion_value = 2;
+	}
+	/* ]]> */
+	</script>
+	<script type="text/javascript" src="http://www.googleadservices.com/pagead/conversion.js">
+	</script>
+	<noscript>
+	<div style="display:inline;">
+	<img height="1" width="1" style="border-style:none;" alt="" src="http://www.googleadservices.com/pagead/conversion/977072348/?value=2&amp;label=A8-4COzWsAIQ3OHz0QM&amp;guid=ON&amp;script=0"/>
+	</div>
+	</noscript>
+	
   </body>
 </html>
