--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -46,12 +46,14 @@
     </noscript>
 	
 	<table style="padding:0px; margin: 0px 0px 10px 0px; width:100%" cellpadding="0" cellspacing="0"> 
-		<tr style="height: 40px;">
+		<tr style="height: 45px;">
 			 
 			<td id="pname">
 				<a href="http://code.google.com/p/yuchberry/" target=_blank id="pname"> YuchBerry</a> 中转服务器注册机制 (<a href="http://yuchberrysign.yuchberry.info" target=_blank id="pname">YuchSign</a>测试版)
-				<a href="http://code.google.com/p/yuchberry/wiki/Yuchsign_Using_Intro" target=_blank style="font-size: 80%;" >使用帮助</a>
+				<a href="http://code.google.com/p/yuchberry/wiki/Yuchsign_Using_Intro" target=_blank style="font-size: 80%;" >使用帮助</a><br />
+				<p style="font-size: 90%;"> 有任何问题，请发送邮件到<a href="mailto:yuchberry@gmail.com?subject=YuchSign 求助">yuchberry@gmail.com</a> ，我会尽快处理。</p>
 			</td>
+			
 			
 		</tr>
 	</table> 
@@ -64,6 +66,8 @@
         <td id="yuchTab"></td>
       </tr>
     </table>
+
+	
 	
 	<script type="text/javascript">
 	/* <![CDATA[ */
