--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -11,28 +11,31 @@
   <body>
     <iframe src="javascript:''" id="__gwt_historyFrame" tabIndex='-1' style="position:absolute;width:0;height:0;border:0"></iframe>
     <noscript>
-      <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
+      <div style="width: 22em; position: absolute; left: 481px; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif; top: 103px;">
         Your web browser must have JavaScript enabled
         in order for this application to display correctly.
       </div>
     </noscript>
 	
-<div class="header">
-  <div class="headercon"><a href="/" class="logo"></a>
-      <div class="nav" id="navBut">
-      </div>
-  </div>  
-</div>
-<div class="big">
-	<div class="bigicon" id="welcome"> 
-	    <div class="actimage" id="change" ></div>
-	    <div class="download">  
-        	<a href="http://code.google.com/p/yuchberry/downloads/list" target="_blank"></a>
+    <div class="yheader">
+      <div class="headercon">
+        <div class="logo" ></div>
+        <ul>有任何问题、建议，请发送邮件到 <a href="mailto:yuchberry@gmail.com?subject=语盒求助">yuchberry@gmail.com</a>，我会尽快处理</ul>
+        <div class="nav" id="navBut"></div>
+      </div>  
+    </div>
+  <div class="big">
+        <div class="bigicon" id="welcome"> 
+            <div class="actimage" id="change" ></div>
+            <div class="download">  
+                <a href="http://code.google.com/p/yuchberry/downloads/list" target="_blank"></a>
+            </div>
         </div>
-    </div>
-    <div class="account" id="account">
-    </div>
-</div>
+        <div class="account" id="account" style="display:none"></div>
+        <div class="faq" id="faq" style="display:none"></div>
+        <div class="play" id="play" style="display:none"></div>
+        <div class="yuchTab" id="yuchTab" style="display:none"></div>
+  </div>
 	
 	
 	
