--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -20,24 +20,72 @@
     <div class="yheader">
       <div class="headercon">
         <div class="logo" ></div>
-        <ul>有任何问题、建议，请发送邮件到 <a href="mailto:yuchberry@gmail.com?subject=语盒求助">yuchberry@gmail.com</a>，我会尽快处理</ul>
         <div class="nav" id="navBut"></div>
       </div>  
     </div>
   <div class="big">
-        <div class="bigicon" id="welcome"> 
-            <div class="actimage" id="change" ></div>
+        <div class="bigicon" id="welcome">
+  			<div class="bg">
+               <div class="actimage" id="change" ></div>
+            </div>
             <div class="download">  
+                <li>黑莓全平台客户端最新版</li>
+                <li>跨平台个人服务器最新版</li>
                 <a href="http://code.google.com/p/yuchberry/downloads/list" target="_blank"></a>
             </div>
         </div>
         <div class="account" id="account" style="display:none"></div>
-        <div class="faq" id="faq" style="display:none"></div>
-        <div class="play" id="play" style="display:none"></div>
-        <div class="yuchTab" id="yuchTab" style="display:none"></div>
+        <div class="faq" id="faq" style="display:none">
+          <ul><li>如何获得主机？<br>自己架设或者租用YuchBerry官方的中转服务。 </li></ul><ul><li>自己怎么架设？<br>最简单的是ADSL+DDNS，如果没有条件的可以租用便宜的Linux VPS（$2-$6一个月不等），可以合伙租用。ADSL+DDNS教程在<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">这里</a> ,Linux VPS购买教程在<a href="http://www.vpsma.com/" target="_blank">这里</a>，使用教程在<a href="http://www.geektu.com/?p=680" target="_blank">这里</a>。 </li></ul><ul><li>如何租用YuchBerry官方的中转服务？<br>可以访问<a href="http://yuchberrysign.yuchberry.info/" target="_blank">这里</a>，注册一个帐号，然后添加推送账户，同步即可。如果你是黑莓6.0的系统，可以直接用手机浏览器同步，否则，需要使用桌面浏览器同步。 </li></ul><ul><li>租用要钱么？<br> 它有5天的免费使用时间（完全的功能），之后你在考虑如何继续使用YuchBerry。 </li></ul><ul><li>架设出错，连接不上怎么办？<br>打开YuchBerry客户端，进入 <strong>诊断信息</strong> ，可以看到错误的提示；查看服务器的日志（自己架设的服务器在log目录下面，使用YuchBerry官方的中转服务可以登录之后查看）。然后到<a href="http://code.google.com/p/yuchberry/wiki/Connect_Error_info" target="_blank">错误列表</a>查找出现的错误，以及解决的办法。或者到<a href="http://code.google.com/p/yuchberry/issues/list" target="_blank">问题区</a>，查找前人遇到过的问题，也可以提出你的问题，我会及时处理。 </li></ul><ul><li>我还是连接不上，也不知道怎么解决？<br>直接发信到 <strong>yuchberry@gmail.com</strong> ，我会及时回信解答你的问题。我也是用的YuchBerry，呵呵。 </li></ul><ul><li>我想深入了解一下YuchBerry，怎么开始？<br>最好从<a href="http://code.google.com/p/yuchberry/wiki/FAQ" target="_blank">FAQ</a>开始，里面的介绍和链接，足够让你深入的了解YuchBerry，弄明白它是如何快速、安全的推送邮件的。 </li></ul>
+        </div>
+    <div class="play" id="play" style="display:none"></div>
+    <div class="yuchTab" id="yuchTab" style="display:none"></div>
+    
   </div>
-	
-	
-	
+  <div class="mid">
+   <div class="intro">
+    <div class="introblock" id="block0">
+     <h4>- 轻松快捷的邮件推送</h4>
+     <li>最短能在10秒钟内推送到手机</li>
+     <li>保证邮箱的已读邮件和未读邮件同步</li>
+     <li>流量小，推送到手机的邮件是经过压缩的</li>
+    </div>
+    <div class="introblock" id="block1">
+     <h4>- 实时同步的微博推送</h4>
+     <li>推送微博，无需手动刷新微博</li>
+     <li>迅速掌握好友的实施动态，随时打招呼</li>
+    </div>
+    <div class="introblock" id="block2">
+     <h4>- 自驾服务器安全实用</h4>
+     <li>Java服务器，跨平台，IT Geek轻松构架</li>
+     <li>大量文档帮助，构建最安全的个人服务器</li>
+     <li>安全，能够使用用户自己生成的128位密钥的SSL加密进行传输</li>
+    </div>
+   </div>
+   <div class="contact"><br />
+      <ul><a href="mailto:yuchberry@gmail.com?subject=语盒建议、求助" id="mail">发送邮件联系我</a><br /></ul>
+      <ul><a href="http://t.sina.com.cn/1894359415/" target="_blank" id="sina">新浪微博联系我</a><br /></ul>
+      <ul><a href="http://t.qq.com/yuchberry/" target="_blank" id="qq">腾讯微博联系我</a><br /></ul>
+      <div class="user" >
+       <h3>他们也在用语盒……</h3>
+       <li><b>bartonchen***@gmail.com:</b> 我和我老婆是黑莓手机用户，最近自己用自己的个人电脑做了服务器运行你的yuchberrymail，软件很好，发送和接收都比较快，也比较省电和流量，现在我跟我老婆每天都拿邮件当短信用了！……</li>
+       <li><b><a href="http://weibo.com/xiexiaohun" target="_blank">@王小协</a></b>：Yuchberry看微博神马的超带感 ~ BBer都试试吧 ~再感谢 @yuchberry 大神出的如此好软。前两天我服务器坏了，没能用。那个纠结啊!无助啊!!!</li>
+       <li><b><a href="http://weibo.com/vf79" target="_blank">@唔岳</a></b>：@yuchberry YB一整天都登不上去，习惯push了一下没了真难过！</li>
+       <li><b><a href="http://t.qq.com/gstone7" target="_blank">@方块三</a></b>：感觉gmail配合yuchberry使用，效果是最好的。</li>
+       <li><b><a href="http://t.qq.com/y-wuli" target="_blank">@杨武力</a></b>：感谢Yuchberry原创及康子在其基础上搭建的服务器，成功实现黑莓最强悍的功能，此后在金凤山上也可以瞬时收到邮件了。砖头手机复活。</li>
+       <a href="http://weibo.com/k/yuchberry?Refer=Index_header" target="_blank">新浪微博更多评价>></a>
+       <a href="http://t.qq.com/search/index.php?k=yuchberry&pos=101" target="_blank">腾讯微博更多评价>></a>
+      </div>
+   </div>
+  </div>
+  <div class="foot">
+   <a target="_blank" href="http://yuchberry.googlecode.com/">YuchBerry项目主页</a>
+   <span>|</span>
+   <a target="_blank" href="http://yuchting.diandian.com/">开发者日志</a>
+   <span>|</span>
+   <a href="http://v1.miliao.com/">友情链接</a>
+   <br>
+   YuchTing @2011 所有版权先保留
+  </div>
   </body>
 </html>
