--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -17,7 +17,7 @@
       </div>
     </noscript>
 	
-    <div class="yheader">
+<div class="yheader">
       <div class="headercon">
         <div class="logo" ></div>
         <div class="nav" id="navBut"></div>
@@ -45,27 +45,27 @@
   <div class="mid">
    <div class="intro">
     <div class="introblock" id="block0">
-     <h4>- 轻松快捷的邮件推送</h4>
+     <h3>- 轻松快捷的邮件推送</h3>
      <li>最短能在10秒钟内推送到手机</li>
      <li>保证邮箱的已读邮件和未读邮件同步</li>
      <li>流量小，推送到手机的邮件是经过压缩的</li>
     </div>
     <div class="introblock" id="block1">
-     <h4>- 实时同步的微博推送</h4>
+     <h3>- 实时同步的微博推送</h3>
      <li>推送微博，无需手动刷新微博</li>
      <li>迅速掌握好友的实施动态，随时打招呼</li>
     </div>
     <div class="introblock" id="block2">
-     <h4>- 自驾服务器安全实用</h4>
+     <h3>- 自驾服务器安全实用</h3>
      <li>Java服务器，跨平台，IT Geek轻松构架</li>
      <li>大量文档帮助，构建最安全的个人服务器</li>
      <li>安全，能够使用用户自己生成的128位密钥的SSL加密进行传输</li>
     </div>
    </div>
    <div class="contact"><br />
-      <ul><a href="mailto:yuchberry@gmail.com?subject=语盒建议、求助" id="mail">发送邮件联系我</a><br /></ul>
-      <ul><a href="http://t.sina.com.cn/1894359415/" target="_blank" id="sina">新浪微博联系我</a><br /></ul>
-      <ul><a href="http://t.qq.com/yuchberry/" target="_blank" id="qq">腾讯微博联系我</a><br /></ul>
+      <a class=but href="mailto:yuchberry@gmail.com?subject=语盒建议、求助" id="mail">发送邮件联系我</a><br /><br /><br />
+      <a class=but href="http://t.sina.com.cn/1894359415/" target="_blank" id="sina">新浪微博联系我</a><br /><br /><br />
+      <a class=but href="http://t.qq.com/yuchberry/" target="_blank" id="qq">腾讯微博联系我</a><br />
       <div class="user" >
        <h3>他们也在用语盒……</h3>
        <li><b>bartonchen***@gmail.com:</b> 我和我老婆是黑莓手机用户，最近自己用自己的个人电脑做了服务器运行你的yuchberrymail，软件很好，发送和接收都比较快，也比较省电和流量，现在我跟我老婆每天都拿邮件当短信用了！……</li>
