--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0021)http://v1.miliao.com/ -->
-<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="keywords" content="YuchBerry,语盒,手机,PushMail,推送,开源,新浪微博,QQ微博,腾讯微博,PushWeibo,app,软件">
-  <head>
+  <style type="text/css">
+<!--
+body,td,th {
+	font-size: 13px;
+}
+-->
+</style><head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link type="text/css" rel="stylesheet" href="Yuchsign.css">
     <title>语盒(YuchBerry) 我们专注黑莓推送</title>
@@ -24,42 +30,92 @@
       </div>  
     </div>
   <div class="big">
-        <div class="bigicon" id="welcome">
-  			<div class="bg">
-               <div class="actimage" id="change" ></div>
-            </div>
-            <div class="download">  
-                <li>黑莓全平台客户端最新版</li>
-                <li>跨平台个人服务器最新版</li>
-                <a href="http://code.google.com/p/yuchberry/downloads/list" target="_blank"></a>
-            </div>
+    <div class="bigicon" id="welcome" style="display:none">
+        <div class="bg">
+           <div class="actimage" id="change" ></div>
         </div>
-        <div class="account" id="account" style="display:none"></div>
-        <div class="faq" id="faq" style="display:none">
-          <ul><li>如何获得主机？<br>自己架设或者租用YuchBerry官方的中转服务。 </li></ul><ul><li>自己怎么架设？<br>最简单的是ADSL+DDNS，如果没有条件的可以租用便宜的Linux VPS（$2-$6一个月不等），可以合伙租用。ADSL+DDNS教程在<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">这里</a> ,Linux VPS购买教程在<a href="http://www.vpsma.com/" target="_blank">这里</a>，使用教程在<a href="http://www.geektu.com/?p=680" target="_blank">这里</a>。 </li></ul><ul><li>如何租用YuchBerry官方的中转服务？<br>可以访问<a href="http://yuchberrysign.yuchberry.info/" target="_blank">这里</a>，注册一个帐号，然后添加推送账户，同步即可。如果你是黑莓6.0的系统，可以直接用手机浏览器同步，否则，需要使用桌面浏览器同步。 </li></ul><ul><li>租用要钱么？<br> 它有5天的免费使用时间（完全的功能），之后你在考虑如何继续使用YuchBerry。 </li></ul><ul><li>架设出错，连接不上怎么办？<br>打开YuchBerry客户端，进入 <strong>诊断信息</strong> ，可以看到错误的提示；查看服务器的日志（自己架设的服务器在log目录下面，使用YuchBerry官方的中转服务可以登录之后查看）。然后到<a href="http://code.google.com/p/yuchberry/wiki/Connect_Error_info" target="_blank">错误列表</a>查找出现的错误，以及解决的办法。或者到<a href="http://code.google.com/p/yuchberry/issues/list" target="_blank">问题区</a>，查找前人遇到过的问题，也可以提出你的问题，我会及时处理。 </li></ul><ul><li>我还是连接不上，也不知道怎么解决？<br>直接发信到 <strong>yuchberry@gmail.com</strong> ，我会及时回信解答你的问题。我也是用的YuchBerry，呵呵。 </li></ul><ul><li>我想深入了解一下YuchBerry，怎么开始？<br>最好从<a href="http://code.google.com/p/yuchberry/wiki/FAQ" target="_blank">FAQ</a>开始，里面的介绍和链接，足够让你深入的了解YuchBerry，弄明白它是如何快速、安全的推送邮件的。 </li></ul>
+        <div class="download">  
+            <li>黑莓全平台客户端最新版</li>
+            <li>跨平台个人服务器最新版</li>
+            <a href="http://code.google.com/p/yuchberry/downloads/list" target="_blank"></a><br />
+            <span style="font-size:180%;color:#666; margin:0 0 0 20px">我们是喜欢黑莓的</span><br /><span style="font-size:200%; margin:10px 0 0 150px;">Yucher</span> <br /><span style=" margin:20px 30px; font-size:160%">爱黑莓</span> <span style=" margin:20px 5px; font-size:190%">爱交流</span> <br /><span style=" margin:20px 5px; font-size:210%">也爱技术</span><br /><span style="margin:0 30px; font-size:120%;">打造全新沟通方式</span><span style="font-size:300%">语盒</span><br /><br /><span style=" margin:20px 0 0 50px; font-size:150%; color:#999">沟通现在 掌控未来……</span>
         </div>
-    <div class="play" id="play" style="display:none"></div>
+    </div>
+    <div class="account" id="account" style="display:none"></div>
+    <div class="faq" id="faq" style="font-size:115%; display:none">
+      <ul><li>如何获得主机？<br>自己架设或者租用YuchBerry官方的中转服务。 </li></ul><ul><li>自己怎么架设？<br>最简单的是ADSL+DDNS，如果没有条件的可以租用便宜的Linux VPS（$2-$6一个月不等），可以合伙租用。ADSL+DDNS教程在<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">这里</a> ,Linux VPS购买教程在<a href="http://www.vpsma.com/" target="_blank">这里</a>，使用教程在<a href="http://www.geektu.com/?p=680" target="_blank">这里</a>。 </li></ul><ul><li>如何租用YuchBerry官方的中转服务？<br>可以访问<a href="http://yuchberrysign.yuchberry.info/" target="_blank">这里</a>，注册一个帐号，然后添加推送账户，同步即可。如果你是黑莓6.0的系统，可以直接用手机浏览器同步，否则，需要使用桌面浏览器同步。 </li></ul><ul><li>租用要钱么？<br> 它有5天的免费使用时间（完全的功能），之后你在考虑如何继续使用YuchBerry。 </li></ul><ul><li>架设出错，连接不上怎么办？<br>打开YuchBerry客户端，进入 <strong>诊断信息</strong> ，可以看到错误的提示；查看服务器的日志（自己架设的服务器在log目录下面，使用YuchBerry官方的中转服务可以登录之后查看）。然后到<a href="http://code.google.com/p/yuchberry/wiki/Connect_Error_info" target="_blank">错误列表</a>查找出现的错误，以及解决的办法。或者到<a href="http://code.google.com/p/yuchberry/issues/list" target="_blank">问题区</a>，查找前人遇到过的问题，也可以提出你的问题，我会及时处理。 </li></ul><ul><li>我还是连接不上，也不知道怎么解决？<br>直接发信到 <strong>yuchberry@gmail.com</strong> ，我会及时回信解答你的问题。我也是用的YuchBerry，呵呵。 </li></ul><ul><li>我想深入了解一下YuchBerry，怎么开始？<br>最好从<a href="http://code.google.com/p/yuchberry/wiki/FAQ" target="_blank">FAQ</a>开始，里面的介绍和链接，足够让你深入的了解YuchBerry，弄明白它是如何快速、安全的推送邮件的。 </li></ul>
+    </div>
+    <div class="play" id="play">
+      <div class="page" id="page0" style="display:none;">
+          <div class="left">
+            <h2>开篇语 + 原理视频</h2>
+            <ul>这个方式在 YuchBerry 建立项目之前就已经想出来了，我想，其他的程序员或者工程师也肯定想到过。</ul>
+            <ul>但是，任何人都知道，一个想法变为现实，并且得到用户的使用认可，是十分困难的事情，那是一个2万5千里项目长征。</ul>
+            <ul>YuchBerry，语盒，借助开源的思想，还有广大黑莓用户的积极参与，话费了做成了现在这样。</ul>
+            <ul>语盒，它的故事还在继续……</ul>
+          </div>
+          <div class="right" id="play_page0_right" style="display:none;">
+          <embed src="http://player.youku.com/player.php/sid/XMjM5MjU1MzIw/v.swf" allowFullScreen="true" quality="high" width="480" height="380" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
+          </div>
+      </div>
+      <div class="page" id="page1" style="display:none;">
+          <div class="left">
+            <h2>初识语盒</h2>
+            <ul>在语盒的项目主页上<a href="http://code.google.com/p/yuchberry/downloads/list" target="_blank">下载</a>了最新的客户端之后，就可以安装上，使用黑莓的桌面管理器还是WebOTA，就看自己喜好了，注意要下对版本哦。</ul>
+            <ul>语盒的初始界面很简单，需要你输入一个<b>主机地址，端口，用户密码</b>，因为为了保证推送服务，服务器需要单独的开一个端口为每一个用户。</ul>
+            <ul>那如何填写主机和端口呢 <span style="font-size:300%">？</span></ul>
+          </div>
+          <div class="right" id="play_page0_right">
+             <img src="http://clip2net.com/clip/m85555/1312364087-o-kmv-2-83kb.jpg"/>
+          </div>
+      </div>
+      <div class="page" id="page2">
+          <div class="left">
+            <h2>寻找主机</h2>
+            <ul>这个过程并没有想象中的那么困难。</ul>
+            <ul>作为任何一开始接触到的语盒的新手，都建议先试用语盒官方的服务器，官方的服务器提供<b>15天的全功能</b>单推送账户的免费试用时间，这段时间里面完全可以熟悉语盒，看是否适合自己，再决定如何选择服务器。</ul>
+            <ul>推送嘛，服务器当然要比客户端重要的多咯。</ul>
+            <ul>如果你是想从头折腾一把，自架服务器，我也鼓励你，需要网络基础知识就行，还有官方大量<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">文档</a>帮助你，最低只要ADSL+DDNS就能架设成功。</ul>
+          </div>
+          <div class="right" id="play_page0_right">
+             <img src="http://clip2net.com/clip/m85555/1312369112-o-kmv-3-61kb.jpg"/>
+          </div>
+      </div>
+    </div>
     <div class="yuchTab" id="yuchTab" style="display:none"></div>
-    
   </div>
+  
   <div class="mid">
    <div class="intro">
     <div class="introblock" id="block0">
      <h3>- 轻松快捷的邮件推送</h3>
-     <li>最短能在10秒钟内推送到手机</li>
-     <li>保证邮箱的已读邮件和未读邮件同步</li>
-     <li>流量小，推送到手机的邮件是经过压缩的</li>
+     <li>时刻保持和服务器的链接</li>
+     <li>邮箱的已读邮件和未读邮件同步</li>
+     <a href="http://code.google.com/p/yuchberry/wiki/Use_introduction" target="_blank">更多>></a>
     </div>
     <div class="introblock" id="block1">
-     <h3>- 实时同步的微博推送</h3>
-     <li>推送微博，无需手动刷新微博</li>
+     <h3>- 实时同步多个微博</h3>
+     <li>一个程序，轻松搞定多个微博</li>
      <li>迅速掌握好友的实施动态，随时打招呼</li>
+     <a href="http://code.google.com/p/yuchberry/wiki/YuchBerry_Weibo" target="_blank">更多>></a>
     </div>
     <div class="introblock" id="block2">
      <h3>- 自驾服务器安全实用</h3>
      <li>Java服务器，跨平台，IT Geek轻松构架</li>
      <li>大量文档帮助，构建最安全的个人服务器</li>
-     <li>安全，能够使用用户自己生成的128位密钥的SSL加密进行传输</li>
+     <a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">更多>></a>
+    </div>
+    <div class="introblock" id="block3">
+     <h3>- 迅速快捷推送（Push）机制</h3>
+     <li>最短能在10秒钟内将新邮件推送到手机</li>
+     <li>及时回复、评论好友的动态信息，全新的微博体验</li>
+     <a href="http://code.google.com/p/yuchberry/wiki/FAQ" target="_blank">更多>></a>
+    </div>
+    <div class="introblock" id="block4">
+     <h3>- 自创协议，灵活压缩数据</h3>
+     <li>创新的通讯协议，减小不必要数据量</li>
+     <li>自适应压缩方式，小流量包月拥有更多信息</li>
+     <a href="http://code.google.com/p/yuchberry/wiki/FAQ" target="_blank">更多>></a>
     </div>
    </div>
    <div class="contact"><br />
@@ -67,14 +123,20 @@
       <a class=but href="http://t.sina.com.cn/1894359415/" target="_blank" id="sina">新浪微博联系我</a><br /><br /><br />
       <a class=but href="http://t.qq.com/yuchberry/" target="_blank" id="qq">腾讯微博联系我</a><br />
       <div class="user" >
-       <h3>他们也在用语盒……</h3>
+       <h2>他们也在用语盒……</h2>
        <li><b>bartonchen***@gmail.com:</b> 我和我老婆是黑莓手机用户，最近自己用自己的个人电脑做了服务器运行你的yuchberrymail，软件很好，发送和接收都比较快，也比较省电和流量，现在我跟我老婆每天都拿邮件当短信用了！……</li>
        <li><b><a href="http://weibo.com/xiexiaohun" target="_blank">@王小协</a></b>：Yuchberry看微博神马的超带感 ~ BBer都试试吧 ~再感谢 @yuchberry 大神出的如此好软。前两天我服务器坏了，没能用。那个纠结啊!无助啊!!!</li>
        <li><b><a href="http://weibo.com/vf79" target="_blank">@唔岳</a></b>：@yuchberry YB一整天都登不上去，习惯push了一下没了真难过！</li>
+       <li><b><a href="http://weibo.com/yangchern" target="_blank">@yangchern</a></b>：yuchberry,这个是一个黑莓的邮件push开源项目。目前已经可以不必自己架设服务器了，免费使用5天，实事求是地讲，是我见过的最好的国内的开源项目。好不仅仅在技术上，而是管理，策略，细节。</li>
+       <li><b><a href="http://weibo.com/ivxzhao" target="_blank">@ivxzhao</a></b>：哈哈~周末要来了，我又经开始折腾了~YUCHBERRY，刷不断网的机，还有XWEIBO，这个周末哪也不去也TMD充实了。//@想搞定深度男的宅女幽:研究研究！//@ivxzhao:有了断网修复，断不断网已无所谓了</li>
        <li><b><a href="http://t.qq.com/gstone7" target="_blank">@方块三</a></b>：感觉gmail配合yuchberry使用，效果是最好的。</li>
        <li><b><a href="http://t.qq.com/y-wuli" target="_blank">@杨武力</a></b>：感谢Yuchberry原创及康子在其基础上搭建的服务器，成功实现黑莓最强悍的功能，此后在金凤山上也可以瞬时收到邮件了。砖头手机复活。</li>
+       <li><b><a href="http://t.qq.com/vnline" target="_blank">@vnline</a></b>：yuchberry确实贼快了，这边一点，那边不超10S就收到了。当短信用很不错的的o(*≧▽≦)ツ</li>
+       <li><b><a href="http://t.qq.com/xuanxzi" target="_blank">@王睿</a></b>：yuchberry 霸气外露...</li>
+       <li><b><a href="http://t.qq.com/freebao3" target="_blank">@CCTV</a></b>：某黑莓博客，居然在推广网秦杀毒，我就说嘛，yuchberry 开源的很多人没去推广，一个在黑莓上无用的商业软件还能出一个评测。你说奸商的用意在哪？</li>
+       <span style=" margin:10px 20px; font-size:200%">......</span>   
        <a href="http://weibo.com/k/yuchberry?Refer=Index_header" target="_blank">新浪微博更多评价>></a>
-       <a href="http://t.qq.com/search/index.php?k=yuchberry&pos=101" target="_blank">腾讯微博更多评价>></a>
+       <a href="http://t.qq.com/search/index.php?k=yuchberry&pos=101" target="_blank" style="margin:0 0 0 10px" >腾讯微博更多评价>></a>
       </div>
    </div>
   </div>
@@ -83,7 +145,7 @@
    <span>|</span>
    <a target="_blank" href="http://yuchting.diandian.com/">开发者日志</a>
    <span>|</span>
-   <a href="http://v1.miliao.com/">友情链接</a>
+   <a target="_blank" href="http://v1.miliao.com/">友情链接</a>
    <br>
    YuchTing @2011 所有版权先保留
   </div>
