--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -69,16 +69,30 @@ body,td,th {
              <img src="http://clip2net.com/clip/m85555/1312364087-o-kmv-2-83kb.jpg"/>
           </div>
       </div>
-      <div class="page" id="page2">
+      <div class="page" id="page2" style="display:none;">
           <div class="left">
             <h2>寻找主机</h2>
             <ul>这个过程并没有想象中的那么困难。</ul>
-            <ul>作为任何一开始接触到的语盒的新手，都建议先试用语盒官方的服务器，官方的服务器提供<b>15天的全功能</b>单推送账户的免费试用时间，这段时间里面完全可以熟悉语盒，看是否适合自己，再决定如何选择服务器。</ul>
+            <ul>作为任何一位开始接触到的语盒的新手——不管你是IT达人还是小白，都建议先试用语盒官方的服务器，官方的服务器提供<b>15天的全功能</b>、单推送账户的免费试用时间，这段时间里面完全可以熟悉语盒，看是否适合自己，再决定如何选择服务器。</ul>
             <ul>推送嘛，服务器当然要比客户端重要的多咯。</ul>
-            <ul>如果你是想从头折腾一把，自架服务器，我也鼓励你，需要网络基础知识就行，还有官方大量<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">文档</a>帮助你，最低只要ADSL+DDNS就能架设成功。</ul>
+            <ul>如果你是想从头折腾一把，自架服务器，我也不会拦着你的，需要网络基础知识就行，还有官方大量<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">文档</a>帮助你，最低只要 ADSL + DDNS 就能架设成功。</ul>
+            <ul>接下来看看如何配置账户吧……</ul>
           </div>
           <div class="right" id="play_page0_right">
              <img src="http://clip2net.com/clip/m85555/1312369112-o-kmv-3-61kb.jpg"/>
+          </div>
+      </div>
+      <div class="page" id="page3" >
+          <div class="left">
+            <h2>配置推送账户</h2>
+            <ul>如果已经注册了官方账户，并且收到了激活邮件，那么就可以进行配置了。</ul>
+            <ul>首先需要选择推送的账户类型，目前语盒支持两种推送类型：邮件、微博，但是免费的使用只能推送一个账户</ul>
+            <ul>是邮件？还是微博呢？</ul>
+            <ul>如果你是想从头折腾一把，自架服务器，我也不会拦着你的，需要网络基础知识就行，还有官方大量<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">文档</a>帮助你，最低只要 ADSL + DDNS 就能架设成功。</ul>
+            <ul>接下来看看如何配置账户吧……</ul>
+          </div>
+          <div class="right" id="play_page0_right">
+             
           </div>
       </div>
     </div>
