--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -38,23 +38,23 @@ body,td,th {
             <li>黑莓全平台客户端最新版</li>
             <li>跨平台个人服务器最新版</li>
             <a href="http://code.google.com/p/yuchberry/downloads/list" target="_blank"></a><br />
-            <span style="font-size:180%;color:#666; margin:0 0 0 20px">我们是喜欢黑莓的</span><br /><span style="font-size:200%; margin:10px 0 0 150px;">Yucher</span> <br /><span style=" margin:20px 30px; font-size:160%">爱黑莓</span> <span style=" margin:20px 5px; font-size:190%">爱交流</span> <br /><span style=" margin:20px 5px; font-size:210%">也爱技术</span><br /><span style="margin:0 30px; font-size:120%;">打造全新沟通方式</span><span style="font-size:300%">语盒</span><br /><br /><span style=" margin:20px 0 0 50px; font-size:150%; color:#999">沟通现在 掌控未来……</span>
+            <span style="font-size:18px ;color:#666; margin:0 0 0 20px">我们是喜欢黑莓的</span><br /><span style="font-size:22px; margin:10px 0 0 150px;">Yucher</span> <br /><span style=" margin:20px 30px; font-size:18px ">爱黑莓</span> <span style=" margin:20px 5px; font-size:22px">爱交流</span> <br /><span style=" margin:20px 5px; font-size:24px">也爱技术</span><br /><span style="margin:0 30px; font-size:16px;">打造全新沟通方式</span><span style="font-size:36px">语盒</span><br /><br /><span style=" margin:20px 0 0 50px; font-size:20px; color:#999">沟通现在 掌控未来……</span>
         </div>
     </div>
     <div class="account" id="account" style="display:none"></div>
     <div class="faq" id="faq" style="font-size:115%; display:none">
       <ul><li>如何获得主机？<br>自己架设或者租用YuchBerry官方的中转服务。 </li></ul><ul><li>自己怎么架设？<br>最简单的是ADSL+DDNS，如果没有条件的可以租用便宜的Linux VPS（$2-$6一个月不等），可以合伙租用。ADSL+DDNS教程在<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">这里</a> ,Linux VPS购买教程在<a href="http://www.vpsma.com/" target="_blank">这里</a>，使用教程在<a href="http://www.geektu.com/?p=680" target="_blank">这里</a>。 </li></ul><ul><li>如何租用YuchBerry官方的中转服务？<br>可以访问<a href="http://yuchberrysign.yuchberry.info/" target="_blank">这里</a>，注册一个帐号，然后添加推送账户，同步即可。如果你是黑莓6.0的系统，可以直接用手机浏览器同步，否则，需要使用桌面浏览器同步。 </li></ul><ul><li>租用要钱么？<br> 它有5天的免费使用时间（完全的功能），之后你在考虑如何继续使用YuchBerry。 </li></ul><ul><li>架设出错，连接不上怎么办？<br>打开YuchBerry客户端，进入 <strong>诊断信息</strong> ，可以看到错误的提示；查看服务器的日志（自己架设的服务器在log目录下面，使用YuchBerry官方的中转服务可以登录之后查看）。然后到<a href="http://code.google.com/p/yuchberry/wiki/Connect_Error_info" target="_blank">错误列表</a>查找出现的错误，以及解决的办法。或者到<a href="http://code.google.com/p/yuchberry/issues/list" target="_blank">问题区</a>，查找前人遇到过的问题，也可以提出你的问题，我会及时处理。 </li></ul><ul><li>我还是连接不上，也不知道怎么解决？<br>直接发信到 <strong>yuchberry@gmail.com</strong> ，我会及时回信解答你的问题。我也是用的YuchBerry，呵呵。 </li></ul><ul><li>我想深入了解一下YuchBerry，怎么开始？<br>最好从<a href="http://code.google.com/p/yuchberry/wiki/FAQ" target="_blank">FAQ</a>开始，里面的介绍和链接，足够让你深入的了解YuchBerry，弄明白它是如何快速、安全的推送邮件的。 </li></ul>
     </div>
-    <div class="play" id="play">
-      <div class="page" id="page0" style="display:none;">
+    <div class="play" id="play"  >
+      <div class="page" id="page0" >
           <div class="left">
             <h2>开篇语 + 原理视频</h2>
             <ul>这个方式在 YuchBerry 建立项目之前就已经想出来了，我想，其他的程序员或者工程师也肯定想到过。</ul>
-            <ul>但是，任何人都知道，一个想法变为现实，并且得到用户的使用认可，是十分困难的事情，那是一个2万5千里项目长征。</ul>
-            <ul>YuchBerry，语盒，借助开源的思想，还有广大黑莓用户的积极参与，话费了做成了现在这样。</ul>
+            <ul>但是，任何人都知道，一个想法变为现实，并且得到用户的使用认可，是十分困难的事情，那是一个两万五千里的项目长征。</ul>
+            <ul>YuchBerry，语盒，借助开源的思想，还有广大黑莓用户的积极参与，做成了现在这样。</ul>
             <ul>语盒，它的故事还在继续……</ul>
           </div>
-          <div class="right" id="play_page0_right" style="display:none;">
+          <div class="right" id="play_page0_right">
           <embed src="http://player.youku.com/player.php/sid/XMjM5MjU1MzIw/v.swf" allowFullScreen="true" quality="high" width="480" height="380" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
           </div>
       </div>
@@ -66,7 +66,7 @@ body,td,th {
             <ul>那如何填写主机和端口呢 <span style="font-size:300%">？</span></ul>
           </div>
           <div class="right" id="play_page0_right">
-             <img src="http://clip2net.com/clip/m85555/1312364087-o-kmv-2-83kb.jpg"/>
+             <img src="http://farm7.static.flickr.com/6134/6007395958_fda10d6d70.jpg" width="470" height="380" alt="未标题-2" />
           </div>
       </div>
       <div class="page" id="page2" style="display:none;">
@@ -79,20 +79,86 @@ body,td,th {
             <ul>接下来看看如何配置账户吧……</ul>
           </div>
           <div class="right" id="play_page0_right">
-             <img src="http://clip2net.com/clip/m85555/1312369112-o-kmv-3-61kb.jpg"/>
+            <img src="http://farm7.static.flickr.com/6027/6007396082_de377ef9b5.jpg" width="470" height="380" alt="未标题-3" />
           </div>
       </div>
-      <div class="page" id="page3" >
+      <div class="page" id="page3" style="display:none;" >
           <div class="left">
             <h2>配置推送账户</h2>
             <ul>如果已经注册了官方账户，并且收到了激活邮件，那么就可以进行配置了。</ul>
             <ul>首先需要选择推送的账户类型，目前语盒支持两种推送类型：邮件、微博，但是免费的使用只能推送一个账户</ul>
             <ul>是邮件？还是微博呢？</ul>
-            <ul>如果你是想从头折腾一把，自架服务器，我也不会拦着你的，需要网络基础知识就行，还有官方大量<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">文档</a>帮助你，最低只要 ADSL + DDNS 就能架设成功。</ul>
-            <ul>接下来看看如何配置账户吧……</ul>
+            <ul>根据自己的需求来吧，你是想体验一下使用黑莓内置界面收发邮件，还是想先体验一下推送微博的功能，只有你自己才能知道。</ul>
+            <ul>添加之后，当然还没有结束啦……</ul>
           </div>
           <div class="right" id="play_page0_right">
-             
+             <img src="http://farm7.static.flickr.com/6134/6007395800_81142a4716.jpg" width="500" height="380" alt="未标题-4" />
+          </div>
+      </div>
+      <div class="page" id="page5" style="display:none;">
+          <div class="left">
+            <h2>与中转服务器同步，获得地址+端口</h2>
+            <ul>添加好推送类型中的账户之后，需要回到账户属性那里点击<b>同步账户</b>按钮</ul>
+            <ul>当然，这个内部的中间过程是很复杂的，但是作为用户的你，只需要花上一点时间等待即可。</ul>
+            <ul>如果顺利，你会同步成功，并且获得<b>主机地址</b>和<b>端口</b>，这个时候就需要掏出手机，填写上对应的数据，</ul>
+            <ul>然后……</ul>
+          </div>
+          <div class="right" id="play_page0_right">
+             <img src="http://farm7.static.flickr.com/6121/6007498640_b36c8abeb6.jpg" width="500" height="380" alt="未标题-5" />
+          </div>
+      </div>
+      <div class="page" id="page6" style="display:none;" >
+          <div class="left">
+            <h2>手机连接</h2>
+            <ul>不多说了，<b style="font-size:200%">连接！</b></ul>
+          </div>
+          <div class="right" id="play_page0_right">
+             <img src="http://farm7.static.flickr.com/6144/6007036467_f0588df95d.jpg" width="500" height="380" alt="未标题-6" />
+          </div>
+      </div>
+      <div class="page" id="page7" style="display:none;" >
+          <div class="left">
+            <h2>连接失败，错误排查</h2>
+            <ul>实践证明，一个好的软件，是需要有一个完善的错误排查机制的，语盒也不例外。</ul>
+            <ul>无论是客户端，还是服务器，都会让用户自己查找出手机为何连接不上的<a href="http://code.google.com/p/yuchberry/wiki/Connect_Error_info" target="_blank">原因</a>，尽快的排查出错误，<b>而不是束手无策</b>。</ul>
+            <ul>如果你实在搞不定，就发邮件到 <a href="mailto:yuchberry@gmail.com?subject=语盒求助">yuchberry@gmail.com</a>联系我吧。我会在第一时间回复你的问题的。</ul>
+			<img src="http://farm7.static.flickr.com/6024/6007621124_c8fd415fbb.jpg" width="415" height="129" alt="未标题-8" />
+          </div>
+          <div class="right" id="play_page0_right">
+          	<img src="http://farm7.static.flickr.com/6130/6007065569_1da4cc9e10.jpg" width="500" height="380" alt="未标题-7" />
+          </div>
+      </div>
+      <div class="page" id="page8" style="display:none;" >
+          <div class="left">
+            <h2>收发邮件</h2>
+            <ul>连接成功之后，就可以正常使用语盒了。</ul>
+            <ul>在黑莓客户端上，收发邮件是内嵌到<b>黑莓消息程序</b>里面的，所有语盒接收到的邮件都会出现在这里。新建、回复、转发邮件操作，完全就像是黑莓系统自带那样方便。</ul>
+            <ul>完整详细的使用文档在<a href="http://code.google.com/p/yuchberry/wiki/Use_introduction" target="_blank">这个地方</a>。</ul>
+            <ul>使用电脑浏览器登录自己的邮箱，给自己发送一封邮件，看看多久能够收到吧？</ul>
+          </div>
+          <div class="right" id="play_page0_right">
+          	<img src="http://farm7.static.flickr.com/6012/6007133997_04e3577786.jpg" width="500" height="380" alt="未标题-9" />
+          </div>
+      </div>
+      <div class="page" id="page9" style="display:none;" >
+          <div class="left">
+            <h2>收发微博</h2>
+            <ul>如果推送的是微博账户，连接成功后，需要在高级设置里面<b>开启Weibo模块</b>，系统才会加载微博模块所需要数据进行显示。</ul>
+            <img src="http://farm7.static.flickr.com/6017/6007849646_bbc4531f11.jpg" width="415" height="129" alt="未标题-11" />
+            <ul>在黑莓客户端上，收发邮件是内嵌到<b>黑莓消息程序</b>里面的，所有语盒接收到的邮件都会出现在这里。新建、回复、转发邮件操作，完全就像是黑莓系统自带那样方便。</ul>
+            <ul>微博模块的完整详细的使用文档在<a href="http://code.google.com/p/yuchberry/wiki/YuchBerry_Weibo#配置客户端" target="_blank">这个地方</a>。</ul>
+          </div>
+          <div class="right" id="play_page0_right">
+			<img src="http://farm7.static.flickr.com/6137/6007747378_e6f0baa888.jpg" width="500" height="380" alt="未标题-10" />
+          </div>
+      </div>
+      <div class="page" id="page10" style="display:none;">
+          <div class="left">
+            <h2>玩转语盒</h2>
+            
+          </div>
+          <div class="right" id="play_page0_right">
+			
           </div>
       </div>
     </div>
@@ -123,6 +189,7 @@ body,td,th {
      <h3>- 迅速快捷推送（Push）机制</h3>
      <li>最短能在10秒钟内将新邮件推送到手机</li>
      <li>及时回复、评论好友的动态信息，全新的微博体验</li>
+     <li>省去轮训方式的60%以上的多余电量消耗，为手机“保驾护航”。</li>
      <a href="http://code.google.com/p/yuchberry/wiki/FAQ" target="_blank">更多>></a>
     </div>
     <div class="introblock" id="block4">
