--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -30,7 +30,7 @@ body,td,th {
       </div>  
     </div>
   <div class="big">
-    <div class="bigicon" id="welcome" style="display:none">
+    <div class="bigicon" id="welcome">
         <div class="bg">
            <div class="actimage" id="change" ></div>
         </div>
@@ -38,14 +38,14 @@ body,td,th {
             <li>黑莓全平台客户端最新版</li>
             <li>跨平台个人服务器最新版</li>
             <a href="http://code.google.com/p/yuchberry/downloads/list" target="_blank"></a><br />
-            <span style="font-size:18px ;color:#666; margin:0 0 0 20px">我们是喜欢黑莓的</span><br /><span style="font-size:22px; margin:10px 0 0 150px;">Yucher</span> <br /><span style=" margin:20px 30px; font-size:18px ">爱黑莓</span> <span style=" margin:20px 5px; font-size:22px">爱交流</span> <br /><span style=" margin:20px 5px; font-size:24px">也爱技术</span><br /><span style="margin:0 30px; font-size:16px;">打造全新沟通方式</span><span style="font-size:36px">语盒</span><br /><br /><span style=" margin:20px 0 0 50px; font-size:20px; color:#999">沟通现在 掌控未来……</span>
+            <span style="font-size:18px ;color:#666; margin:0 0 0 20px">我们是喜欢黑莓的</span><br /><span style="font-size:22px; margin:10px 0 0 150px;">Yucher</span> <br /><span style=" margin:20px 30px; font-size:18px ">爱黑莓</span> <span style=" margin:20px 5px; font-size:22px">爱交流</span> <br /><span style=" margin:20px 5px; font-size:24px">也爱技术</span><br /><span style="margin:0 30px; font-size:16px;">打造全新沟通方式</span><span style="font-size:34px">语盒</span><br /><br /><span style=" margin:20px 0 0 50px; font-size:20px; color:#999">沟通现在 掌控未来……</span>
         </div>
     </div>
     <div class="account" id="account" style="display:none"></div>
     <div class="faq" id="faq" style="font-size:115%; display:none">
-      <ul><li>如何获得主机？<br>自己架设或者租用YuchBerry官方的中转服务。 </li></ul><ul><li>自己怎么架设？<br>最简单的是ADSL+DDNS，如果没有条件的可以租用便宜的Linux VPS（$2-$6一个月不等），可以合伙租用。ADSL+DDNS教程在<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">这里</a> ,Linux VPS购买教程在<a href="http://www.vpsma.com/" target="_blank">这里</a>，使用教程在<a href="http://www.geektu.com/?p=680" target="_blank">这里</a>。 </li></ul><ul><li>如何租用YuchBerry官方的中转服务？<br>可以访问<a href="http://yuchberrysign.yuchberry.info/" target="_blank">这里</a>，注册一个帐号，然后添加推送账户，同步即可。如果你是黑莓6.0的系统，可以直接用手机浏览器同步，否则，需要使用桌面浏览器同步。 </li></ul><ul><li>租用要钱么？<br> 它有5天的免费使用时间（完全的功能），之后你在考虑如何继续使用YuchBerry。 </li></ul><ul><li>架设出错，连接不上怎么办？<br>打开YuchBerry客户端，进入 <strong>诊断信息</strong> ，可以看到错误的提示；查看服务器的日志（自己架设的服务器在log目录下面，使用YuchBerry官方的中转服务可以登录之后查看）。然后到<a href="http://code.google.com/p/yuchberry/wiki/Connect_Error_info" target="_blank">错误列表</a>查找出现的错误，以及解决的办法。或者到<a href="http://code.google.com/p/yuchberry/issues/list" target="_blank">问题区</a>，查找前人遇到过的问题，也可以提出你的问题，我会及时处理。 </li></ul><ul><li>我还是连接不上，也不知道怎么解决？<br>直接发信到 <strong>yuchberry@gmail.com</strong> ，我会及时回信解答你的问题。我也是用的YuchBerry，呵呵。 </li></ul><ul><li>我想深入了解一下YuchBerry，怎么开始？<br>最好从<a href="http://code.google.com/p/yuchberry/wiki/FAQ" target="_blank">FAQ</a>开始，里面的介绍和链接，足够让你深入的了解YuchBerry，弄明白它是如何快速、安全的推送邮件的。 </li></ul>
+      <br /><ul><li>如何获得主机？<br>自己架设或者租用YuchBerry官方的中转服务。 </li></ul><ul><li>自己怎么架设？<br>最简单的是ADSL+DDNS，如果没有条件的可以租用便宜的Linux VPS（$2-$6一个月不等），可以合伙租用。ADSL+DDNS教程在<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">这里</a> ,Linux VPS购买教程在<a href="http://www.vpsma.com/" target="_blank">这里</a>，使用教程在<a href="http://www.geektu.com/?p=680" target="_blank">这里</a>。 </li></ul><ul><li>如何租用YuchBerry官方的中转服务？<br>可以访问<a href="http://yuchberrysign.yuchberry.info/" target="_blank">这里</a>，注册一个帐号，然后添加推送账户，同步即可。如果你是黑莓6.0的系统，可以直接用手机浏览器同步，否则，需要使用桌面浏览器同步。 </li></ul><ul><li>租用要钱么？<br> 它有5天的免费使用时间（完全的功能），之后你在考虑如何继续使用YuchBerry。 </li></ul><ul><li>架设出错，连接不上怎么办？<br>打开YuchBerry客户端，进入 <strong>诊断信息</strong> ，可以看到错误的提示；查看服务器的日志（自己架设的服务器在log目录下面，使用YuchBerry官方的中转服务可以登录之后查看）。然后到<a href="http://code.google.com/p/yuchberry/wiki/Connect_Error_info" target="_blank">错误列表</a>查找出现的错误，以及解决的办法。或者到<a href="http://code.google.com/p/yuchberry/issues/list" target="_blank">问题区</a>，查找前人遇到过的问题，也可以提出你的问题，我会及时处理。 </li></ul><ul><li>我还是连接不上，也不知道怎么解决？<br>直接发信到 <strong>yuchberry@gmail.com</strong> ，我会及时回信解答你的问题。我也是用的YuchBerry，呵呵。 </li></ul><ul><li>我想深入了解一下YuchBerry，怎么开始？<br>最好从<a href="http://code.google.com/p/yuchberry/wiki/FAQ" target="_blank">FAQ</a>开始，里面的介绍和链接，足够让你深入的了解YuchBerry，弄明白它是如何快速、安全的推送邮件的。 </li></ul>
     </div>
-    <div class="play" id="play"  >
+    <div class="play" id="play" style="display:none;">
       <div class="page" id="page0" >
           <div class="left">
             <h2>开篇语 + 原理视频</h2>
@@ -54,7 +54,7 @@ body,td,th {
             <ul>YuchBerry，语盒，借助开源的思想，还有广大黑莓用户的积极参与，做成了现在这样。</ul>
             <ul>语盒，它的故事还在继续……</ul>
           </div>
-          <div class="right" id="play_page0_right">
+          <div class="right" >
           <embed src="http://player.youku.com/player.php/sid/XMjM5MjU1MzIw/v.swf" allowFullScreen="true" quality="high" width="480" height="380" align="middle" allowScriptAccess="always" type="application/x-shockwave-flash"></embed>
           </div>
       </div>
@@ -65,7 +65,7 @@ body,td,th {
             <ul>语盒的初始界面很简单，需要你输入一个<b>主机地址，端口，用户密码</b>，因为为了保证推送服务，服务器需要单独的开一个端口为每一个用户。</ul>
             <ul>那如何填写主机和端口呢 <span style="font-size:300%">？</span></ul>
           </div>
-          <div class="right" id="play_page0_right">
+          <div class="right" >
              <img src="http://farm7.static.flickr.com/6134/6007395958_fda10d6d70.jpg" width="470" height="380" alt="未标题-2" />
           </div>
       </div>
@@ -78,7 +78,7 @@ body,td,th {
             <ul>如果你是想从头折腾一把，自架服务器，我也不会拦着你的，需要网络基础知识就行，还有官方大量<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">文档</a>帮助你，最低只要 ADSL + DDNS 就能架设成功。</ul>
             <ul>接下来看看如何配置账户吧……</ul>
           </div>
-          <div class="right" id="play_page0_right">
+          <div class="right" >
             <img src="http://farm7.static.flickr.com/6027/6007396082_de377ef9b5.jpg" width="470" height="380" alt="未标题-3" />
           </div>
       </div>
@@ -91,7 +91,7 @@ body,td,th {
             <ul>根据自己的需求来吧，你是想体验一下使用黑莓内置界面收发邮件，还是想先体验一下推送微博的功能，只有你自己才能知道。</ul>
             <ul>添加之后，当然还没有结束啦……</ul>
           </div>
-          <div class="right" id="play_page0_right">
+          <div class="right" >
              <img src="http://farm7.static.flickr.com/6134/6007395800_81142a4716.jpg" width="500" height="380" alt="未标题-4" />
           </div>
       </div>
@@ -103,7 +103,7 @@ body,td,th {
             <ul>如果顺利，你会同步成功，并且获得<b>主机地址</b>和<b>端口</b>，这个时候就需要掏出手机，填写上对应的数据，</ul>
             <ul>然后……</ul>
           </div>
-          <div class="right" id="play_page0_right">
+          <div class="right">
              <img src="http://farm7.static.flickr.com/6121/6007498640_b36c8abeb6.jpg" width="500" height="380" alt="未标题-5" />
           </div>
       </div>
@@ -112,7 +112,7 @@ body,td,th {
             <h2>手机连接</h2>
             <ul>不多说了，<b style="font-size:200%">连接！</b></ul>
           </div>
-          <div class="right" id="play_page0_right">
+          <div class="right">
              <img src="http://farm7.static.flickr.com/6144/6007036467_f0588df95d.jpg" width="500" height="380" alt="未标题-6" />
           </div>
       </div>
@@ -124,7 +124,7 @@ body,td,th {
             <ul>如果你实在搞不定，就发邮件到 <a href="mailto:yuchberry@gmail.com?subject=语盒求助">yuchberry@gmail.com</a>联系我吧。我会在第一时间回复你的问题的。</ul>
 			<img src="http://farm7.static.flickr.com/6024/6007621124_c8fd415fbb.jpg" width="415" height="129" alt="未标题-8" />
           </div>
-          <div class="right" id="play_page0_right">
+          <div class="right">
           	<img src="http://farm7.static.flickr.com/6130/6007065569_1da4cc9e10.jpg" width="500" height="380" alt="未标题-7" />
           </div>
       </div>
@@ -136,7 +136,7 @@ body,td,th {
             <ul>完整详细的使用文档在<a href="http://code.google.com/p/yuchberry/wiki/Use_introduction" target="_blank">这个地方</a>。</ul>
             <ul>使用电脑浏览器登录自己的邮箱，给自己发送一封邮件，看看多久能够收到吧？</ul>
           </div>
-          <div class="right" id="play_page0_right">
+          <div class="right" >
           	<img src="http://farm7.static.flickr.com/6012/6007133997_04e3577786.jpg" width="500" height="380" alt="未标题-9" />
           </div>
       </div>
@@ -148,17 +148,20 @@ body,td,th {
             <ul>在黑莓客户端上，收发邮件是内嵌到<b>黑莓消息程序</b>里面的，所有语盒接收到的邮件都会出现在这里。新建、回复、转发邮件操作，完全就像是黑莓系统自带那样方便。</ul>
             <ul>微博模块的完整详细的使用文档在<a href="http://code.google.com/p/yuchberry/wiki/YuchBerry_Weibo#配置客户端" target="_blank">这个地方</a>。</ul>
           </div>
-          <div class="right" id="play_page0_right">
+          <div class="right">
 			<img src="http://farm7.static.flickr.com/6137/6007747378_e6f0baa888.jpg" width="500" height="380" alt="未标题-10" />
           </div>
       </div>
-      <div class="page" id="page10" style="display:none;">
+      <div class="page" id="page10" style="display:none;" >
           <div class="left">
             <h2>玩转语盒</h2>
-            
+            <ul>语盒有大量配置来适应不同需要的用户，在通过语盒的主界面进入的<b>高级设置</b>，里面有连接、邮件、提醒、流量统计等等的设置。详细的配置说面在<a href="http://code.google.com/p/yuchberry/wiki/Use_introduction#高级设置" target="_blank">这里</a>。</ul>
+            <ul>如果开启了Weibo模块，那么在微博的主界面的<b>选项</b>菜单可以进入微博的配置集面，里面全是和微博相关的配置，详细配置在<a href="http://code.google.com/p/yuchberry/wiki/YuchBerry_Weibo#配置客户端">这里</a>。</ul>
+            <ul>如果能够详细的了解邮件的<a href="http://code.google.com/p/yuchberry/wiki/Use_introduction#推送、发送流程（原理）" target="_blank">推送、发送机制</a>，那么对于使用、配置语盒来说更会得心应手。</ul>
+            <ul>作为一个<b>开源、开放项目</b>，语盒希望你能更多的了解它，使用它，传播它，他不会把自己的已经所拥有的东西藏着掖着，反而就怕你不去发现他。</ul>
           </div>
-          <div class="right" id="play_page0_right">
-			
+          <div class="right" >
+			<img src="http://farm7.static.flickr.com/6147/6008394267_a1eff7c578.jpg" width="500" height="380" alt="未标题-12" />
           </div>
       </div>
     </div>
