--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -8,7 +8,8 @@ body,td,th {
 	font-size: 13px;
 }
 -->
-</style><head>
+</style>
+  <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link type="text/css" rel="stylesheet" href="Yuchsign.css">
     <title>语盒(YuchBerry) 我们专注黑莓推送</title>
@@ -30,7 +31,7 @@ body,td,th {
       </div>  
     </div>
   <div class="big">
-    <div class="bigicon" id="welcome">
+    <div class="bigicon" id="welcome" >
         <div class="bg">
            <div class="actimage" id="change" ></div>
         </div>
@@ -43,10 +44,10 @@ body,td,th {
     </div>
     <div class="account" id="account" style="display:none"></div>
     <div class="faq" id="faq" style="font-size:115%; display:none">
-      <br /><ul><li>如何获得主机？<br>自己架设或者租用YuchBerry官方的中转服务。 </li></ul><ul><li>自己怎么架设？<br>最简单的是ADSL+DDNS，如果没有条件的可以租用便宜的Linux VPS（$2-$6一个月不等），可以合伙租用。ADSL+DDNS教程在<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">这里</a> ,Linux VPS购买教程在<a href="http://www.vpsma.com/" target="_blank">这里</a>，使用教程在<a href="http://www.geektu.com/?p=680" target="_blank">这里</a>。 </li></ul><ul><li>如何租用YuchBerry官方的中转服务？<br>可以访问<a href="http://yuchberrysign.yuchberry.info/" target="_blank">这里</a>，注册一个帐号，然后添加推送账户，同步即可。如果你是黑莓6.0的系统，可以直接用手机浏览器同步，否则，需要使用桌面浏览器同步。 </li></ul><ul><li>租用要钱么？<br> 它有5天的免费使用时间（完全的功能），之后你在考虑如何继续使用YuchBerry。 </li></ul><ul><li>架设出错，连接不上怎么办？<br>打开YuchBerry客户端，进入 <strong>诊断信息</strong> ，可以看到错误的提示；查看服务器的日志（自己架设的服务器在log目录下面，使用YuchBerry官方的中转服务可以登录之后查看）。然后到<a href="http://code.google.com/p/yuchberry/wiki/Connect_Error_info" target="_blank">错误列表</a>查找出现的错误，以及解决的办法。或者到<a href="http://code.google.com/p/yuchberry/issues/list" target="_blank">问题区</a>，查找前人遇到过的问题，也可以提出你的问题，我会及时处理。 </li></ul><ul><li>我还是连接不上，也不知道怎么解决？<br>直接发信到 <strong>yuchberry@gmail.com</strong> ，我会及时回信解答你的问题。我也是用的YuchBerry，呵呵。 </li></ul><ul><li>我想深入了解一下YuchBerry，怎么开始？<br>最好从<a href="http://code.google.com/p/yuchberry/wiki/FAQ" target="_blank">FAQ</a>开始，里面的介绍和链接，足够让你深入的了解YuchBerry，弄明白它是如何快速、安全的推送邮件的。 </li></ul>
+      <br /><ul><li>如何获得主机？<br>自己架设或者租用YuchBerry官方的中转服务。 </li></ul><ul><li>自己怎么架设？<br>最简单的是ADSL+DDNS，如果没有条件的可以租用便宜的Linux VPS（$2-$6一个月不等），可以合伙租用。ADSL+DDNS教程在<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">这里</a> ,Linux VPS购买教程在<a href="http://www.vpsma.com/" target="_blank">这里</a>，使用教程在<a href="http://www.geektu.com/?p=680" target="_blank">这里</a>。 </li></ul><ul><li>如何租用YuchBerry官方的中转服务？<br>可以访问<a href="http://yuchberrysign.yuchberry.info/" target="_blank">这里</a>，注册一个帐号，然后添加推送账户，同步即可。如果你是黑莓6.0的系统，可以直接用手机浏览器同步，否则，需要使用桌面浏览器同步。 </li></ul><ul><li>租用要钱么？<br> 它有5天的免费使用时间（完全的功能），之后你在考虑如何继续使用YuchBerry。 </li></ul><ul><li>架设出错，连接不上怎么办？<br>打开YuchBerry客户端，进入 <strong>诊断信息</strong> ，可以看到错误的提示；查看服务器的日志（自己架设的服务器在log目录下面，使用YuchBerry官方的中转服务可以登录之后查看）。然后到<a href="http://code.google.com/p/yuchberry/wiki/Connect_Error_info" target="_blank">错误列表</a>查找出现的错误，以及解决的办法。或者到<a href="http://code.google.com/p/yuchberry/issues/list" target="_blank">问题区</a>，查找前人遇到过的问题，也可以提出你的问题，我们会及时处理。 </li></ul><ul><li>我还是连接不上，也不知道怎么解决？<br>直接发信到 <strong>yuchberry@gmail.com</strong> ，我们会及时回信解答你的问题。我们也是用的YuchBerry，呵呵。 </li></ul><ul><li>我想深入了解一下YuchBerry，怎么开始？<br>最好从<a href="http://code.google.com/p/yuchberry/wiki/FAQ" target="_blank">FAQ</a>开始，里面的介绍和链接，足够让你深入的了解YuchBerry，弄明白它是如何快速、安全的推送邮件的。 </li></ul>
     </div>
     <div class="play" id="play" style="display:none;">
-      <div class="page" id="page0" >
+      <div class="page" id="page0"  >
           <div class="left">
             <h2>开篇语 + 原理视频</h2>
             <ul>这个方式在 YuchBerry 建立项目之前就已经想出来了，我想，其他的程序员或者工程师也肯定想到过。</ul>
@@ -62,7 +63,7 @@ body,td,th {
           <div class="left">
             <h2>初识语盒</h2>
             <ul>在语盒的项目主页上<a href="http://code.google.com/p/yuchberry/downloads/list" target="_blank">下载</a>了最新的客户端之后，就可以安装上，使用黑莓的桌面管理器还是WebOTA，就看自己喜好了，注意要下对版本哦。</ul>
-            <ul>语盒的初始界面很简单，需要你输入一个<b>主机地址，端口，用户密码</b>，因为为了保证推送服务，服务器需要单独的开一个端口为每一个用户。</ul>
+            <ul>语盒的初始界面很简单，需要你输入一个<b>主机地址，端口，用户密码</b>，为了保证推送服务，服务器需要单独的开一个端口为每一个用户。</ul>
             <ul>那如何填写主机和端口呢 <span style="font-size:300%">？</span></ul>
           </div>
           <div class="right" >
@@ -75,7 +76,7 @@ body,td,th {
             <ul>这个过程并没有想象中的那么困难。</ul>
             <ul>作为任何一位开始接触到的语盒的新手——不管你是IT达人还是小白，都建议先试用语盒官方的服务器，官方的服务器提供<b>15天的全功能</b>、单推送账户的免费试用时间，这段时间里面完全可以熟悉语盒，看是否适合自己，再决定如何选择服务器。</ul>
             <ul>推送嘛，服务器当然要比客户端重要的多咯。</ul>
-            <ul>如果你是想从头折腾一把，自架服务器，我也不会拦着你的，需要网络基础知识就行，还有官方大量<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">文档</a>帮助你，最低只要 ADSL + DDNS 就能架设成功。</ul>
+            <ul>如果你是想从头折腾一把，自架服务器，我们也不会拦着你的，需要网络基础知识就行，还有官方大量<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">文档</a>帮助你，最低只要 ADSL + DDNS 就能架设成功。</ul>
             <ul>接下来看看如何配置账户吧……</ul>
           </div>
           <div class="right" >
@@ -121,7 +122,7 @@ body,td,th {
             <h2>连接失败，错误排查</h2>
             <ul>实践证明，一个好的软件，是需要有一个完善的错误排查机制的，语盒也不例外。</ul>
             <ul>无论是客户端，还是服务器，都会让用户自己查找出手机为何连接不上的<a href="http://code.google.com/p/yuchberry/wiki/Connect_Error_info" target="_blank">原因</a>，尽快的排查出错误，<b>而不是束手无策</b>。</ul>
-            <ul>如果你实在搞不定，就发邮件到 <a href="mailto:yuchberry@gmail.com?subject=语盒求助">yuchberry@gmail.com</a>联系我吧。我会在第一时间回复你的问题的。</ul>
+            <ul>如果你实在搞不定，就发邮件到 <a href="mailto:yuchberry@gmail.com?subject=语盒求助">yuchberry@gmail.com</a>联系我们吧。我们会在第一时间回复你的问题的。</ul>
 			<img src="http://farm7.static.flickr.com/6024/6007621124_c8fd415fbb.jpg" width="415" height="129" alt="未标题-8" />
           </div>
           <div class="right">
@@ -145,7 +146,7 @@ body,td,th {
             <h2>收发微博</h2>
             <ul>如果推送的是微博账户，连接成功后，需要在高级设置里面<b>开启Weibo模块</b>，系统才会加载微博模块所需要数据进行显示。</ul>
             <img src="http://farm7.static.flickr.com/6017/6007849646_bbc4531f11.jpg" width="415" height="129" alt="未标题-11" />
-            <ul>在黑莓客户端上，收发邮件是内嵌到<b>黑莓消息程序</b>里面的，所有语盒接收到的邮件都会出现在这里。新建、回复、转发邮件操作，完全就像是黑莓系统自带那样方便。</ul>
+            <ul>语盒团队自己开发了一个微博接受、查看、发送的界面模块，并不是像邮件一样使用黑莓的消息程序。当然，这个模块还仍然在测试过程中，功能尚未完善。</ul>
             <ul>微博模块的完整详细的使用文档在<a href="http://code.google.com/p/yuchberry/wiki/YuchBerry_Weibo#配置客户端" target="_blank">这个地方</a>。</ul>
           </div>
           <div class="right">
@@ -158,10 +159,23 @@ body,td,th {
             <ul>语盒有大量配置来适应不同需要的用户，在通过语盒的主界面进入的<b>高级设置</b>，里面有连接、邮件、提醒、流量统计等等的设置。详细的配置说面在<a href="http://code.google.com/p/yuchberry/wiki/Use_introduction#高级设置" target="_blank">这里</a>。</ul>
             <ul>如果开启了Weibo模块，那么在微博的主界面的<b>选项</b>菜单可以进入微博的配置集面，里面全是和微博相关的配置，详细配置在<a href="http://code.google.com/p/yuchberry/wiki/YuchBerry_Weibo#配置客户端">这里</a>。</ul>
             <ul>如果能够详细的了解邮件的<a href="http://code.google.com/p/yuchberry/wiki/Use_introduction#推送、发送流程（原理）" target="_blank">推送、发送机制</a>，那么对于使用、配置语盒来说更会得心应手。</ul>
-            <ul>作为一个<b>开源、开放项目</b>，语盒希望你能更多的了解它，使用它，传播它，他不会把自己的已经所拥有的东西藏着掖着，反而就怕你不去发现他。</ul>
+            <ul>作为一个<b>开源、开放项目</b>，语盒希望你能更多的了解它，使用它，传播它，他不会把自己的已经所拥有的东西藏着掖着，反而就怕你不去发现它。</ul>
           </div>
           <div class="right" >
 			<img src="http://farm7.static.flickr.com/6147/6008394267_a1eff7c578.jpg" width="500" height="380" alt="未标题-12" />
+          </div>
+      </div>
+      <div class="page" id="page11" style="display:none;">
+          <div class="left">
+            <h2>Geek语盒</h2>
+            <ul>如果你已经熟练的使用、配置语盒了，想自主架设主机一把，Good！<a href="http://code.google.com/p/yuchberry" target="_blank">官方项目主页</a>有大量的文档帮助你实现自架个人服务器，当然现在大量的资料都在遥远的异国他乡的服务器上，不是时时刻刻都能访问得了，请耐心的尝试几次，或者使用其他上网工具互补，我们已经在努力的建立资料站，将文档内容逐步的搬移到更近的地方来。</ul>
+            <ul>如果你已经熟悉了架设语盒<b>个人服务器</b>的一切步骤，那么请尝试的<b>帮助别人</b>，来到<a href="http://yuchberrybbs.com" target="_blank">官方论坛</a>，帮助那些遇到疑问的朋友，他们需要你的帮助，我们也同样需要你的帮助。</ul>
+          </div>
+          <div class="right" >
+            <br /><br />
+          	<ul>如果你是一个程序员，那么开源的语盒或许是你的不错的代码学习、参考资料，现在中文相关的黑莓开发书籍甚少，我们无数个夜晚的研究或许只换来一行代码，只因为没有足够的资料。我们也曾经遇到过疑惑，<a href="http://code.google.com/p/yuchberry/wiki/Why_Open_Source" target="_blank">写下些文字</a>，由衷希望语盒的开放精神能够慢慢的传播开来，传承下去。</ul>
+            <ul>当然，你也可以将语盒的所有代码从事商业活动，不过，请原谅我们的自私，GPL要求你的代码也需要进行开源共享，这个是对我们，也是对他人的最好的回应。</ul>
+			<span style=" margin:0 150px; font-size:50px;">- End -</span>
           </div>
       </div>
     </div>
@@ -171,41 +185,41 @@ body,td,th {
   <div class="mid">
    <div class="intro">
     <div class="introblock" id="block0">
-     <h3>- 轻松快捷的邮件推送</h3>
+     <h3>轻松快捷的邮件推送</h3>
      <li>时刻保持和服务器的链接</li>
      <li>邮箱的已读邮件和未读邮件同步</li>
      <a href="http://code.google.com/p/yuchberry/wiki/Use_introduction" target="_blank">更多>></a>
     </div>
     <div class="introblock" id="block1">
-     <h3>- 实时同步多个微博</h3>
+     <h3>实时同步多个微博</h3>
      <li>一个程序，轻松搞定多个微博</li>
      <li>迅速掌握好友的实施动态，随时打招呼</li>
      <a href="http://code.google.com/p/yuchberry/wiki/YuchBerry_Weibo" target="_blank">更多>></a>
     </div>
     <div class="introblock" id="block2">
-     <h3>- 自驾服务器安全实用</h3>
+     <h3>自驾服务器安全实用</h3>
      <li>Java服务器，跨平台，IT Geek轻松构架</li>
      <li>大量文档帮助，构建最安全的个人服务器</li>
      <a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">更多>></a>
     </div>
     <div class="introblock" id="block3">
-     <h3>- 迅速快捷推送（Push）机制</h3>
+     <h3>迅速快捷推送（Push）机制</h3>
      <li>最短能在10秒钟内将新邮件推送到手机</li>
      <li>及时回复、评论好友的动态信息，全新的微博体验</li>
      <li>省去轮训方式的60%以上的多余电量消耗，为手机“保驾护航”。</li>
      <a href="http://code.google.com/p/yuchberry/wiki/FAQ" target="_blank">更多>></a>
     </div>
     <div class="introblock" id="block4">
-     <h3>- 自创协议，灵活压缩数据</h3>
+     <h3>自创协议，灵活压缩数据</h3>
      <li>创新的通讯协议，减小不必要数据量</li>
      <li>自适应压缩方式，小流量包月拥有更多信息</li>
      <a href="http://code.google.com/p/yuchberry/wiki/FAQ" target="_blank">更多>></a>
     </div>
    </div>
    <div class="contact"><br />
-      <a class=but href="mailto:yuchberry@gmail.com?subject=语盒建议、求助" id="mail">发送邮件联系我</a><br /><br /><br />
-      <a class=but href="http://t.sina.com.cn/1894359415/" target="_blank" id="sina">新浪微博联系我</a><br /><br /><br />
-      <a class=but href="http://t.qq.com/yuchberry/" target="_blank" id="qq">腾讯微博联系我</a><br />
+      <a class=but href="mailto:yuchberry@gmail.com?subject=语盒建议、求助" id="mail">发送邮件联系我们</a><br /><br /><br />
+      <a class=but href="http://t.sina.com.cn/1894359415/" target="_blank" id="sina">新浪微博联系我们</a><br /><br /><br />
+      <a class=but href="http://t.qq.com/yuchberry/" target="_blank" id="qq">腾讯微博联系我们</a><br />
       <div class="user" >
        <h2>他们也在用语盒……</h2>
        <li><b>bartonchen***@gmail.com:</b> 我和我老婆是黑莓手机用户，最近自己用自己的个人电脑做了服务器运行你的yuchberrymail，软件很好，发送和接收都比较快，也比较省电和流量，现在我跟我老婆每天都拿邮件当短信用了！……</li>
