--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -44,7 +44,7 @@ body,td,th {
     </div>
     <div class="account" id="account" style="display:none"></div>
     <div class="faq" id="faq" style="font-size:115%; display:none">
-      <br /><ul><li>如何获得主机？<br>自己架设或者租用YuchBerry官方的中转服务。 </li></ul><ul><li>自己怎么架设？<br>最简单的是ADSL+DDNS，如果没有条件的可以租用便宜的Linux VPS（$2-$6一个月不等），可以合伙租用。ADSL+DDNS教程在<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">这里</a> ,Linux VPS购买教程在<a href="http://www.vpsma.com/" target="_blank">这里</a>，使用教程在<a href="http://www.geektu.com/?p=680" target="_blank">这里</a>。 </li></ul><ul><li>如何租用YuchBerry官方的中转服务？<br>可以访问<a href="http://yuchberrysign.yuchberry.info/" target="_blank">这里</a>，注册一个帐号，然后添加推送账户，同步即可。如果你是黑莓6.0的系统，可以直接用手机浏览器同步，否则，需要使用桌面浏览器同步。 </li></ul><ul><li>租用要钱么？<br> 它有5天的免费使用时间（完全的功能），之后你在考虑如何继续使用YuchBerry。 </li></ul><ul><li>架设出错，连接不上怎么办？<br>打开YuchBerry客户端，进入 <strong>诊断信息</strong> ，可以看到错误的提示；查看服务器的日志（自己架设的服务器在log目录下面，使用YuchBerry官方的中转服务可以登录之后查看）。然后到<a href="http://code.google.com/p/yuchberry/wiki/Connect_Error_info" target="_blank">错误列表</a>查找出现的错误，以及解决的办法。或者到<a href="http://code.google.com/p/yuchberry/issues/list" target="_blank">问题区</a>，查找前人遇到过的问题，也可以提出你的问题，我们会及时处理。 </li></ul><ul><li>我还是连接不上，也不知道怎么解决？<br>直接发信到 <strong>yuchberry@gmail.com</strong> ，我们会及时回信解答你的问题。我们也是用的YuchBerry，呵呵。 </li></ul><ul><li>我想深入了解一下YuchBerry，怎么开始？<br>最好从<a href="http://code.google.com/p/yuchberry/wiki/FAQ" target="_blank">FAQ</a>开始，里面的介绍和链接，足够让你深入的了解YuchBerry，弄明白它是如何快速、安全的推送邮件的。 </li></ul>
+      <br /><ul><li>如何获得主机？<br>自己架设或者租用YuchBerry官方的中转服务。 </li></ul><ul><li>自己怎么架设？<br>最简单的是ADSL+DDNS，如果没有条件的可以租用便宜的Linux VPS（$2-$6一个月不等），可以合伙租用。ADSL+DDNS教程在<a href="http://code.google.com/p/yuchberry/wiki/ADSL_DDNS_yuchberry" target="_blank">这里</a> ,Linux VPS购买教程在<a href="http://www.vpsma.com/" target="_blank">这里</a>，使用教程在<a href="http://www.geektu.com/?p=680" target="_blank">这里</a>。 </li></ul><ul><li>如何租用YuchBerry官方的中转服务？<br>可以访问<a href="http://yuchberrysign.yuchberry.info/" target="_blank">这里</a>，注册一个帐号，然后添加推送账户，同步即可。如果你是黑莓6.0的系统，可以直接用手机浏览器同步，否则，需要使用桌面浏览器同步。 </li></ul><ul><li>租用要钱么？<br> 它有15天的免费使用时间（完全的功能），之后你在考虑如何继续使用YuchBerry。 </li></ul><ul><li>架设出错，连接不上怎么办？<br>打开YuchBerry客户端，进入 <strong>诊断信息</strong> ，可以看到错误的提示；查看服务器的日志（自己架设的服务器在log目录下面，使用YuchBerry官方的中转服务可以登录之后查看）。然后到<a href="http://code.google.com/p/yuchberry/wiki/Connect_Error_info" target="_blank">错误列表</a>查找出现的错误，以及解决的办法。或者到<a href="http://code.google.com/p/yuchberry/issues/list" target="_blank">问题区</a>，查找前人遇到过的问题，也可以提出你的问题，我们会及时处理。 </li></ul><ul><li>我还是连接不上，也不知道怎么解决？<br>直接发信到 <strong>yuchberry@gmail.com</strong> ，我们会及时回信解答你的问题。我们也是用的YuchBerry，呵呵。 </li></ul><ul><li>我想深入了解一下YuchBerry，怎么开始？<br>最好从<a href="http://code.google.com/p/yuchberry/wiki/FAQ" target="_blank">FAQ</a>开始，里面的介绍和链接，足够让你深入的了解YuchBerry，弄明白它是如何快速、安全的推送邮件的。 </li></ul>
     </div>
     <div class="play" id="play" style="display:none;">
       <div class="page" id="page0"  >
@@ -188,6 +188,7 @@ body,td,th {
      <h3>轻松快捷的邮件推送</h3>
      <li>时刻保持和服务器的链接</li>
      <li>邮箱的已读邮件和未读邮件同步</li>
+     <li>多邮箱同时推送，办公生活两不误</li>
      <a href="http://code.google.com/p/yuchberry/wiki/Use_introduction" target="_blank">更多>></a>
     </div>
     <div class="introblock" id="block1">
@@ -235,6 +236,14 @@ body,td,th {
        <span style=" margin:10px 20px; font-size:200%">......</span>   
        <a href="http://weibo.com/k/yuchberry?Refer=Index_header" target="_blank">新浪微博更多评价>></a>
        <a href="http://t.qq.com/search/index.php?k=yuchberry&pos=101" target="_blank" style="margin:0 0 0 10px" >腾讯微博更多评价>></a>
+      </div>
+      <div class="outlink" >
+       <h2>曾经帮助过语盒的朋友们</h2>
+       <a href="http://www.52digital.com/" target="_blank">我爱数码网</a> |
+       <a href="http://www.52blackberry.com/" target="_blank">52blackberry</a> |
+       <a href="http://bbs.bbercn.com/" target="_blank">中国莓论坛</a> <br />       
+       <a href="http://www.bjxiaoc.cn/" target="_blank">北京小C</a> |
+       <a href="http://bber.info/" target="_blank">BBer 莓博</a>
       </div>
    </div>
   </div>
