--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -218,9 +218,18 @@ body,td,th {
     </div>
    </div>
    <div class="contact"><br />
-      <a class=but href="mailto:yuchberry@gmail.com?subject=语盒建议、求助" id="mail">发送邮件联系我们</a><br /><br /><br />
-      <a class=but href="http://t.sina.com.cn/1894359415/" target="_blank" id="sina">新浪微博联系我们</a><br /><br /><br />
-      <a class=but href="http://t.qq.com/yuchberry/" target="_blank" id="qq">腾讯微博联系我们</a><br />
+      <div>
+        <div class="mailWeibo">
+         <a class=but href="mailto:yuchberry@gmail.com?subject=语盒建议、求助" id="mail">发送邮件联系我们</a><br /><br /><br />
+         <a class=but href="http://t.sina.com.cn/1894359415/" target="_blank" id="sina">新浪微博联系我们</a><br /><br /><br />
+         <a class=but href="http://t.qq.com/yuchberry/" target="_blank" id="qq">腾讯微博联系我们</a><br />
+        </div>
+		<div class="qq">
+          互助QQ群：<br />
+          <span style=" margin:auto 10px">148913654（满）</span><br />
+          <span style=" margin:auto 10px">162679435</span><br />          
+        </div>
+      </div>
       <div class="user" >
        <h2>他们也在用语盒……</h2>
        <li><b>bartonchen***@gmail.com:</b> 我和我老婆是黑莓手机用户，最近自己用自己的个人电脑做了服务器运行你的yuchberrymail，软件很好，发送和接收都比较快，也比较省电和流量，现在我跟我老婆每天都拿邮件当短信用了！……</li>
@@ -256,5 +265,16 @@ body,td,th {
    <br>
    YuchTing @2011 所有版权先保留
   </div>
+  <script type="text/javascript" >
+		var _gaq = $wnd._gaq || [];
+	   _gaq.push(['_setAccount', 'UA-24970167-1']);
+	   _gaq.push(['_trackPageview']);
+
+	   (function() {
+		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+	   })();
+  </script>
   </body>
 </html>
