--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <!-- saved from url=(0021)http://v1.miliao.com/ -->
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-	<meta name="keywords" content="YuchBerry,语盒,手机,PushMail,推送,开源,新浪微博,QQ微博,腾讯微博,PushWeibo,app,软件">
+	<meta name="keywords" content="YuchBerry,语盒,黑莓,手机,PushMail,推送,开源,新浪微博,QQ微博,腾讯微博,PushWeibo,app,软件">
   <style type="text/css">
 <!--
 body,td,th {
