--- a/yuchsign/war/Yuchsign.html
+++ b/yuchsign/war/Yuchsign.html
@@ -261,6 +261,8 @@ body,td,th {
    <span>|</span>
    <a target="_blank" href="http://yuchting.diandian.com/">开发者日志</a>
    <span>|</span>
+   <a target="_blank" href="http://code.google.com/p/yuchberry/wiki/Thanks_sheet">感谢列表</a>
+   <span>|</span>
    <a target="_blank" href="http://v1.miliao.com/">友情链接</a>
    <br>
    YuchTing @2011 所有版权先保留
